<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="fr.vyfe.activity.CreateSessionActivity">

    <ScrollView
        android:id="@+id/scrool_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/appBar"
                    layout="@layout/toolbar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBar">

                    <TextView
                        android:id="@+id/tv_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="36dp"
                        android:text="@string/info_session"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="24sp"
                        app:fontFamily="@font/roboto_bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appBar" />

                    <include
                        android:id="@+id/info"
                        layout="@layout/_mock_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title_session"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_title_video"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="20sp"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_information" />

                    <EditText
                        android:id="@+id/et_video_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:background="@drawable/style_input"
                        android:ems="10"
                        android:hint="@string/ex_title_session"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorWhiteTwo"
                        android:textColorHint="@color/colorWhiteTwo"
                        android:textSize="20sp"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_title_session"
                        app:layout_constraintStart_toEndOf="@+id/tv_title_session"
                        app:layout_constraintTop_toTopOf="@+id/tv_title_session" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_choose_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_weight="0.3"
                        android:text="@string/grid_import"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="20sp"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_information" />

                    <Spinner
                        android:id="@+id/spinner_session_infos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.7"
                        android:background="@drawable/style_input"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btn_intent_create_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="0.1"
                        android:alpha="0.6"
                        android:background="@drawable/style_button_white"
                        android:padding="5dp"
                        android:text="@string/create_grid_short"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_import"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_weight="0.8"
                        android:scrollbars="vertical"
                        android:visibility="visible"
                        tools:visibility="visible">


                    </android.support.v7.widget.RecyclerView>

                    <Button
                        android:id="@+id/button_go"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/style_button"
                        android:padding="5dp"
                        android:text="@string/go"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="18sp"
                        app:fontFamily="@font/roboto" />
                </LinearLayout>


            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.86"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorDarkBlueGrey" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="154dp"
                android:layout_height="84dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icons8_partager_96" />


            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/share_url"
                android:textColor="@color/colorWhiteTwo"
                android:textSize="18sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_share" />

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/black"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/url"
                android:textColor="@color/colorWhiteTwo"
                android:textSize="24sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_share" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_url">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/back"
                    android:textColor="@color/colorWhiteTwo"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_go_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="36dp"
                    android:background="@drawable/style_button"
                    android:text="@string/go"
                    android:textColor="@color/colorWhiteTwo" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>